[package]
name = "tibia-rust-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "*"
log = "*"

dotenv = "*"

tokio = { version = "*", features = ["full"] }

sqlx = { version = "*", features = ["runtime-tokio-rustls", "mysql"] }

xml-rs = "0.8"